# Help-Assistant-Chatbot

./: .env.example  .gitignore  API_REFERENCE.md  CODE_REVIEW.md  EVAL_README.md  RAG_TUNING.md  README.md  README_REDIS_CACHE.md  SETUP_DATABASE.md  Welcome.py  main.py  pyproject.toml  requirements-eval.txt  requirements.txt
api/: main.py
api/routes/: cases.py  chat.py  documents.py  health.py
core/: cache.py  chat_log.py  config.py  logging_config.py  text_utils.py
database/: __init__.py  cases_repo.py  schema.py  seed_mock_data.py
embedding/: __init__.py  model.py
eval/: __init__.py  evaluator.py  metrics.py
eval/datasets/: eval.jsonl
eval/judge_prompts/: faithfulness.json  relevance.json
llm/: __init__.py  client.py
notebooks/: 01_documents_api.ipynb  02_chat_api.ipynb  03_chromadb_view.ipynb  README.md  rag_eval_report.ipynb
pages/: 1_🤖_Chatbot.py  2_📄_Upload_Documents.py
prompts/: grounded_answer.txt
services/: __init__.py  cases_intent.py  ingestion.py  rag.py
src/: chat.py  constants.py  custom_llm.py  faiss_store.py  ingestion.py  utils.py
streamlit_app/: Welcome.py  __init__.py  api_client.py  config.py  welcome.py
streamlit_app/pages/: 1_chatbot.py  1_🤖_Chatbot.py  2_upload_documents.py  2_📄_Upload_Documents.py
vector_store/: __init__.py  store.py
